--- a/client/src/components/account/account.css
+++ b/client/src/components/account/account.css
@@ -3,7 +3,8 @@
     justify-content: space-between;
     align-items: center;
     border: 1px solid black;
-    background-color: #fff;
+    border-radius: 15px;
+    background-color: #181a19d3;
     width: 80%;
     margin: 0 auto;
     flex-direction: column;
@@ -17,10 +18,12 @@
     margin: 0;
     font-size: 2.5rem;
     font-weight: bold;
+    color: white;
 }
   
 .account-amount-description {
     margin: 0;
+    color: white;
 }
   
 .account-title {
@@ -28,6 +31,7 @@
     padding: 0;
     font-size: 1rem;
     font-weight: normal;
+    color: white;
 }
   
 .account-content-wrapper {
