--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,12 @@ body {
   min-height: 100vh;
 }
 
+main {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 80vh;
+}
 .main {
   flex: 1;
 }
