--- a/client/src/components/editing/edit.css
+++ b/client/src/components/editing/edit.css
@@ -49,4 +49,11 @@ h1 {
     color: white;
     margin-left: 10px;
 }
-  
+
+.edit-button {
+    border-color: #00bc77;
+    background-color: #00bc77;
+    color: #fff;
+    font-weight: bold;
+    padding: 10px;
+}
