--- a/client/src/components/account/account.css
+++ b/client/src/components/account/account.css
@@ -38,19 +38,13 @@
     width: 100%;
     flex: 1;
 }
-
-.transaction-button {
-    display: block;
-    width: 100%;
-    padding: 8px;
-    font-size: 1.1rem;
-    font-weight: bold;
-    margin-top: 1rem;
-    border-color: #00bc77;
-    background-color: #00bc77;
-    color: #fff;
-}
   
+
+.white {
+    color: white;
+    font-size: 50px;
+}
+
 @media (min-width: 720px) {
     .account {
       flex-direction: row;
