--- a/client/src/components/account/account.css
+++ b/client/src/components/account/account.css
@@ -17,7 +17,8 @@
 .account-amount {
     margin: 0;
     font-size: 2.5rem;
-    font-weight: bold;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     color: white;
 }
   
